update nb title

--- a/s-102/python-reinforcement-and-advanced.ipynb
+++ b/s-102/python-reinforcement-and-advanced.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python reinforcement of basics & Intro to advanced concepts"
+    "# Reinforcement of basics of Python & Intro to advanced concepts"
    ]
   },
   {
